Fix Full profile Links on mobile

--- a/src/components/about/tile/tile.scss
+++ b/src/components/about/tile/tile.scss
@@ -37,7 +37,7 @@
 .tile-full-profile {
   @extend .text-wrapper;
   margin: 1rem 0 3rem 0;
-  font-size: $links-and-cta-font-size;
+  font-size: clamp(100%, 1em, 25px);
   text-decoration: none;
   color: rgba(0, 0, 0, 0.7);
 
